--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,32 +26,32 @@
         app:layout_constraintVertical_bias="0.372" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="254dp"
-        android:layout_height="55dp"
+        android:id="@+id/edit_email"
+        android:layout_width="328dp"
+        android:layout_height="53dp"
         android:layout_marginBottom="24dp"
         android:background="@color/purple_500"
         android:ems="10"
-        android:hint="Enter Email ID"
         android:gravity="center"
+        android:hint="Enter Email ID"
         android:inputType="textEmailAddress"
         android:textSize="20sp"
         android:textStyle="bold"
         app:backgroundTint="#DFD2D2"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
+        app:layout_constraintBottom_toTopOf="@+id/edit_pass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
-        android:layout_width="256dp"
-        android:layout_height="56dp"
+        android:id="@+id/edit_pass"
+        android:layout_width="328dp"
+        android:layout_height="53dp"
         android:layout_marginBottom="60dp"
         android:background="@color/purple_200"
         android:ems="10"
-        android:hint="Password"
         android:gravity="center"
+        android:hint="Password"
         android:inputType="textPassword"
         android:textColor="#0E0E0E"
         android:textSize="20sp"
@@ -107,4 +107,16 @@
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.812" />
+
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintVertical_bias="0.369" />
 </androidx.constraintlayout.widget.ConstraintLayout>
